--- a/JspProject/WebContent/day0616/jqueryhideShow_13.html
+++ b/JspProject/WebContent/day0616/jqueryhideShow_13.html
@@ -4,11 +4,25 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script src="../jquery-3.5.1.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<script type="text/javascript">
+	$(document).ready(function() {
+		$('#hide').click(function() {
+			$('img').hide();
+		});
+		$('#show').click(function() {
+			$('img').show();
+		});
+	});
+</script>
 
 </head>
 <body>
-
+	<div align="center">
+		<img alt="" src="../image/c1.jpg">
+		<button id="hide" class="btn btn-default">Hide</button>
+		<button id="show" class="btn btn-default">Show</button>
+	</div>
 </body>
 </html>
